--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
     "CRAWLERS": 1,
-    "CAPSOLVER_KEY": "",
-    "OPENAI_KEY": ""
+    "CAPSOLVER_KEY": "CAP-B367787B6A0E5DEEE4186194F7C81372",
+    "OPENAI_KEY": "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"
 }
